--- a/Utils/pom.xml
+++ b/Utils/pom.xml
@@ -21,5 +21,39 @@
         </dependency>
     </dependencies>
 
+    <!--
+   Change output directory and include source
+   -->
+    <build>
+        <directory>../CompiledFiles/Utils</directory>
+
+        <sourceDirectory> ${basedir}/source/main/java</sourceDirectory>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
 
 </project>
