--- a/WebService/pom.xml
+++ b/WebService/pom.xml
@@ -33,6 +33,12 @@
         </dependency>
 
         <dependency>
+            <groupId>isd.basecourse</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-ws-core</artifactId>
             <version>2.1.4.RELEASE</version>
